--- a/configs/6810_mvebu_armv8_le_defconfig
+++ b/configs/6810_mvebu_armv8_le_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2015.11-g5604d38-dirty Configuration
+# Buildroot 2015.11-g29c1f9a Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 
@@ -59,7 +59,7 @@ BR2_BZCAT="bzcat"
 BR2_XZCAT="xzcat"
 BR2_TAR_OPTIONS=""
 BR2_DEFCONFIG="/home1/shiyanlong/a7040/rop/buildroot-2015.11-16.08.0/configs/mvebu_armv8_tiny_le_defconfig"
-BR2_DL_DIR="$(TOPDIR)/dl"
+BR2_DL_DIR="/home1/bsp_share/opensrc_software/buildroot_2015_11"
 BR2_HOST_DIR="$(BASE_DIR)/host"
 
 #
@@ -109,7 +109,7 @@ BR2_TOOLCHAIN_EXTERNAL=y
 BR2_TOOLCHAIN_EXTERNAL_CUSTOM=y
 # BR2_TOOLCHAIN_EXTERNAL_DOWNLOAD is not set
 BR2_TOOLCHAIN_EXTERNAL_PREINSTALLED=y
-BR2_TOOLCHAIN_EXTERNAL_PATH="/home1/shiyanlong/a7040/project/gcc-linaro-5.3.1-2016.05-x86_64_aarch64-linux-gnu"
+BR2_TOOLCHAIN_EXTERNAL_PATH="/opt/gcc_7040/gcc-linaro-5.3.1-2016.05-x86_64_aarch64-linux-gnu"
 BR2_TOOLCHAIN_EXTERNAL_CUSTOM_PREFIX="aarch64-linux-gnu"
 BR2_TOOLCHAIN_EXTERNAL_PREFIX="aarch64-linux-gnu"
 BR2_TOOLCHAIN_EXTERNAL_GLIBC=y
