--- a/configs/xgp8_be_defconfig
+++ b/configs/xgp8_be_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2015.11 Configuration
+# Buildroot 2015.11-g8a766e6 Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 
@@ -97,7 +97,7 @@ BR2_BZCAT="bzcat"
 BR2_XZCAT="xzcat"
 BR2_TAR_OPTIONS=""
 BR2_DEFCONFIG="/home/wangjianxin/work/marvell/sdk_4_4/rootf/buildroot-2015.11-16.08.0/configs/mvebu_armv7_tiny_le_defconfig"
-BR2_DL_DIR="$(TOPDIR)/dl"
+BR2_DL_DIR="/home/wangjianxin/.bsp_zl_bak/opensrc_software/buildroot_2015_11"
 BR2_HOST_DIR="$(BASE_DIR)/host"
 
 #
