--- a/configs/6820gpsc_tool_alone_defconfig
+++ b/configs/6820gpsc_tool_alone_defconfig
@@ -1,13 +1,12 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2015.11-g4a61706 Configuration
+# Buildroot 2015.11-g6624366-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 
 #
 # Target options
 #
-BR2_SOFT_FLOAT=y
 BR2_ARCH_HAS_MMU_MANDATORY=y
 # BR2_arcle is not set
 # BR2_arceb is not set
@@ -79,7 +78,7 @@ BR2_powerpc_e5500=y
 # BR2_powerpc_power7 is not set
 # BR2_powerpc_power8 is not set
 BR2_powerpc_CLASSIC=y
-BR2_POWERPC_SOFT_FLOAT=y
+# BR2_POWERPC_SOFT_FLOAT is not set
 
 #
 # Build options
