gpsc expect,tcl工具

--- a/configs/6820gpsc_tool_alone_defconfig
+++ b/configs/6820gpsc_tool_alone_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2015.11-g6624366-dirty Configuration
+# Buildroot 2015.11-ga26640c-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 
@@ -256,16 +256,9 @@ BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_DEVTMPFS=y
 # BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_MDEV is not set
 # BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_EUDEV is not set
 BR2_ROOTFS_DEVICE_TABLE="system/device_table.txt"
-BR2_ROOTFS_SKELETON_DEFAULT=y
-# BR2_ROOTFS_SKELETON_CUSTOM is not set
-# BR2_ROOTFS_MERGED_USR is not set
-# BR2_TARGET_ENABLE_ROOT_LOGIN is not set
-# BR2_SYSTEM_BIN_SH_BASH is not set
-# BR2_SYSTEM_BIN_SH_DASH is not set
-# BR2_SYSTEM_BIN_SH_ZSH is not set
-BR2_SYSTEM_BIN_SH_NONE=y
-# BR2_TARGET_GENERIC_GETTY is not set
-# BR2_TARGET_GENERIC_REMOUNT_ROOTFS_RW is not set
+# BR2_ROOTFS_SKELETON_DEFAULT is not set
+BR2_ROOTFS_SKELETON_CUSTOM=y
+BR2_ROOTFS_SKELETON_CUSTOM_PATH="system/skeleton"
 
 #
 # automatic network configuration via DHCP needs ifupdown or busybox
@@ -727,7 +720,15 @@ BR2_PACKAGE_MONO_ARCH_SUPPORTS=y
 # BR2_PACKAGE_PYTHON is not set
 # BR2_PACKAGE_PYTHON3 is not set
 # BR2_PACKAGE_RUBY is not set
-# BR2_PACKAGE_TCL is not set
+BR2_PACKAGE_TCL=y
+BR2_PACKAGE_TCL_DEL_ENCODINGS=y
+BR2_PACKAGE_TCL_SHLIB_ONLY=y
+
+#
+# Tcl libraries/modules
+#
+BR2_PACKAGE_EXPECT=y
+# BR2_PACKAGE_TCLLIB is not set
 
 #
 # Libraries
