--- a/configs/6820epsc_defconfig
+++ b/configs/6820epsc_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2015.11-g4a61706 Configuration
+# Buildroot 2015.11-g31bbc30 Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 
@@ -767,7 +767,15 @@ BR2_PACKAGE_MONO_ARCH_SUPPORTS=y
 # BR2_PACKAGE_PYTHON is not set
 # BR2_PACKAGE_PYTHON3 is not set
 # BR2_PACKAGE_RUBY is not set
-# BR2_PACKAGE_TCL is not set
+BR2_PACKAGE_TCL=y
+BR2_PACKAGE_TCL_DEL_ENCODINGS=y
+BR2_PACKAGE_TCL_SHLIB_ONLY=y
+
+#
+# Tcl libraries/modules
+#
+BR2_PACKAGE_EXPECT=y
+# BR2_PACKAGE_TCLLIB is not set
 
 #
 # Libraries
