--- a/configs/6820gpsc_tool_alone_defconfig
+++ b/configs/6820gpsc_tool_alone_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2015.11-g140c46f-dirty Configuration
+# Buildroot 2015.11-g9ac77c6-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 
@@ -197,6 +197,7 @@ BR2_TOOLCHAIN_EXTRA_EXTERNAL_LIBS=""
 # BR2_TOOLCHAIN_EXTERNAL_GDB_SERVER_COPY is not set
 # BR2_TOOLCHAIN_EXTERNAL_GETCONF_COPY is not set
 # BR2_PACKAGE_HOST_GDB is not set
+BR2_GDB_VERSION="7.9.1"
 BR2_TOOLCHAIN_HAS_NATIVE_RPC=y
 BR2_USE_WCHAR=y
 BR2_ENABLE_LOCALE=y
@@ -371,7 +372,10 @@ BR2_PACKAGE_MPLAYER_ARCH_SUPPORTS=y
 # BR2_PACKAGE_DSTAT is not set
 # BR2_PACKAGE_DUMA is not set
 # BR2_PACKAGE_FIO is not set
-# BR2_PACKAGE_GDB is not set
+BR2_PACKAGE_GDB=y
+BR2_PACKAGE_GDB_SERVER=y
+BR2_PACKAGE_GDB_DEBUGGER=y
+# BR2_PACKAGE_GDB_TUI is not set
 # BR2_PACKAGE_IOZONE is not set
 # BR2_PACKAGE_KEXEC is not set
 # BR2_PACKAGE_KEXEC_LITE is not set
@@ -390,7 +394,7 @@ BR2_PACKAGE_MPLAYER_ARCH_SUPPORTS=y
 # lttng-modules needs a Linux kernel to be built
 #
 # BR2_PACKAGE_LTTNG_TOOLS is not set
-# BR2_PACKAGE_MEMSTAT is not set
+BR2_PACKAGE_MEMSTAT=y
 # BR2_PACKAGE_NETPERF is not set
 # BR2_PACKAGE_OPROFILE is not set
 # BR2_PACKAGE_PAX_UTILS is not set
@@ -1508,7 +1512,7 @@ BR2_PACKAGE_OPENSSH=y
 # BR2_PACKAGE_WIRESHARK is not set
 # BR2_PACKAGE_WPA_SUPPLICANT is not set
 # BR2_PACKAGE_WVDIAL is not set
-# BR2_PACKAGE_XINETD is not set
+BR2_PACKAGE_XINETD=y
 # BR2_PACKAGE_XL2TP is not set
 
 #
@@ -1643,7 +1647,7 @@ BR2_PACKAGE_INITSCRIPTS=y
 # BR2_PACKAGE_NUT is not set
 # BR2_PACKAGE_POLKIT is not set
 # BR2_PACKAGE_POWERPC_UTILS is not set
-# BR2_PACKAGE_PROCPS_NG is not set
+BR2_PACKAGE_PROCPS_NG=y
 # BR2_PACKAGE_PSMISC is not set
 # BR2_PACKAGE_PWGEN is not set
 # BR2_PACKAGE_QUOTA is not set
