--- a/package/busybox/busybox_gpsc.config
+++ b/package/busybox/busybox_gpsc.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Busybox version: 1.24.1
-# Tue Oct 29 11:43:30 2019
+# Thu Oct 31 09:15:01 2019
 #
 CONFIG_HAVE_DOT_CONFIG=y
 
@@ -968,7 +968,7 @@ CONFIG_FEATURE_PIDOF_OMIT=y
 # CONFIG_FEATURE_PS_UNUSUAL_SYSTEMS is not set
 CONFIG_RENICE=y
 CONFIG_BB_SYSCTL=y
-# CONFIG_FEATURE_SHOW_THREADS is not set
+CONFIG_FEATURE_SHOW_THREADS=y
 CONFIG_WATCH=y
 
 #
