--- a/configs/6820gpsc_tool_alone_defconfig
+++ b/configs/6820gpsc_tool_alone_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2015.11-gb223482-dirty Configuration
+# Buildroot 2015.11-g76b89bd-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 
@@ -1359,7 +1359,7 @@ BR2_PACKAGE_READLINE=y
 # BR2_PACKAGE_DNSMASQ is not set
 # BR2_PACKAGE_DRBD_UTILS is not set
 BR2_PACKAGE_DROPBEAR=y
-BR2_PACKAGE_DROPBEAR_CLIENT=y
+# BR2_PACKAGE_DROPBEAR_CLIENT is not set
 # BR2_PACKAGE_DROPBEAR_DISABLE_REVERSEDNS is not set
 BR2_PACKAGE_DROPBEAR_SMALL=y
 # BR2_PACKAGE_DROPBEAR_WTMP is not set
