--- a/package/busybox/busybox.config
+++ b/package/busybox/busybox.config
@@ -938,7 +938,7 @@ CONFIG_LSOF=y
 # CONFIG_NMETER is not set
 # CONFIG_PMAP is not set
 # CONFIG_POWERTOP is not set
-# CONFIG_PSTREE is not set
+CONFIG_PSTREE=y
 # CONFIG_PWDX is not set
 # CONFIG_SMEMCAP is not set
 CONFIG_TOP=y
@@ -960,7 +960,7 @@ CONFIG_PIDOF=y
 CONFIG_FEATURE_PIDOF_SINGLE=y
 CONFIG_FEATURE_PIDOF_OMIT=y
 # CONFIG_PKILL is not set
-CONFIG_PS=y
+# CONFIG_PS is not set
 # CONFIG_FEATURE_PS_WIDE is not set
 # CONFIG_FEATURE_PS_LONG is not set
 # CONFIG_FEATURE_PS_TIME is not set
