--- a/configs/6810_mvebu_armv8_le_defconfig
+++ b/configs/6810_mvebu_armv8_le_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2015.11-g29c1f9a Configuration
+# Buildroot 2015.11-g898cb3f-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 
@@ -268,7 +268,7 @@ BR2_ROOTFS_POST_SCRIPT_ARGS=""
 # Target packages
 #
 BR2_PACKAGE_BUSYBOX=y
-BR2_PACKAGE_BUSYBOX_CONFIG="package/busybox/busybox.config"
+BR2_PACKAGE_BUSYBOX_CONFIG="package/busybox/busybox_xep8.config"
 BR2_PACKAGE_BUSYBOX_CONFIG_FRAGMENT_FILES=""
 BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 # BR2_PACKAGE_BUSYBOX_SELINUX is not set
