--- a/configs/6820epsc_defconfig
+++ b/configs/6820epsc_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2015.11-ge1da31f Configuration
+# Buildroot 2015.11-g875434e-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 
@@ -1588,7 +1588,7 @@ BR2_PACKAGE_TCPDUMP=y
 # BR2_PACKAGE_WIRESHARK is not set
 # BR2_PACKAGE_WPA_SUPPLICANT is not set
 # BR2_PACKAGE_WVDIAL is not set
-# BR2_PACKAGE_XINETD is not set
+BR2_PACKAGE_XINETD=y
 # BR2_PACKAGE_XL2TP is not set
 
 #
