--- a/package/busybox/busybox_epsc.config
+++ b/package/busybox/busybox_epsc.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Busybox version: 1.24.1
-# Tue Oct 29 11:52:44 2019
+# Thu Nov 21 10:47:42 2019
 #
 CONFIG_HAVE_DOT_CONFIG=y
 
@@ -869,9 +869,9 @@ CONFIG_ROUTE=y
 CONFIG_TELNET=y
 CONFIG_FEATURE_TELNET_TTYPE=y
 CONFIG_FEATURE_TELNET_AUTOLOGIN=y
-# CONFIG_TELNETD is not set
-# CONFIG_FEATURE_TELNETD_STANDALONE is not set
-# CONFIG_FEATURE_TELNETD_INETD_WAIT is not set
+CONFIG_TELNETD=y
+CONFIG_FEATURE_TELNETD_STANDALONE=y
+CONFIG_FEATURE_TELNETD_INETD_WAIT=y
 CONFIG_TFTP=y
 # CONFIG_TFTPD is not set
 
