--- a/toolchain/toolchain-common.in
+++ b/toolchain/toolchain-common.in
@@ -235,10 +235,45 @@ config BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_3
 	bool
 	select BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_2
 
+config BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_4
+	bool
+	select BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_3
+
+config BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_5
+	bool
+	select BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_4
+
+config BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_6
+	bool
+	select BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_5
+
+config BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_7
+	bool
+	select BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_6
+
+config BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_8
+	bool
+	select BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_7
+
+config BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_9
+	bool
+	select BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_8
+
+config BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_10
+	bool
+	select BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_9
+
 # This order guarantees that the highest version is set, as kconfig
 # stops affecting a value on the first matching default.
 config BR2_TOOLCHAIN_HEADERS_AT_LEAST
 	string
+	default "4.10" if BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_10
+	default "4.9"  if BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_9
+	default "4.8"  if BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_8
+	default "4.7"  if BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_7
+	default "4.6"  if BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_6
+	default "4.5"  if BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_5
+	default "4.4"  if BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_4
 	default "4.3"  if BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_3
 	default "4.2"  if BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_2
 	default "4.1"  if BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_1
@@ -296,10 +331,20 @@ config BR2_TOOLCHAIN_GCC_AT_LEAST_5
 	bool
 	select BR2_TOOLCHAIN_GCC_AT_LEAST_4_9
 
+config BR2_TOOLCHAIN_GCC_AT_LEAST_6
+	bool
+	select BR2_TOOLCHAIN_GCC_AT_LEAST_5
+
+config BR2_TOOLCHAIN_GCC_AT_LEAST_7
+	bool
+	select BR2_TOOLCHAIN_GCC_AT_LEAST_6
+
 # This order guarantees that the highest version is set, as kconfig
 # stops affecting a value on the first matching default.
 config BR2_TOOLCHAIN_GCC_AT_LEAST
 	string
+	default "7"	if BR2_TOOLCHAIN_GCC_AT_LEAST_7
+	default "6"	if BR2_TOOLCHAIN_GCC_AT_LEAST_6
 	default "5"	if BR2_TOOLCHAIN_GCC_AT_LEAST_5
 	default "4.9"	if BR2_TOOLCHAIN_GCC_AT_LEAST_4_9
 	default "4.8"	if BR2_TOOLCHAIN_GCC_AT_LEAST_4_8
