--- a/configs/6800_smcc_ls1043_defconfig
+++ b/configs/6800_smcc_ls1043_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2015.11-g898cb3f-dirty Configuration
+# Buildroot 2015.11-g833edab-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 
@@ -109,11 +109,13 @@ BR2_TOOLCHAIN_EXTERNAL=y
 BR2_TOOLCHAIN_EXTERNAL_CUSTOM=y
 # BR2_TOOLCHAIN_EXTERNAL_DOWNLOAD is not set
 BR2_TOOLCHAIN_EXTERNAL_PREINSTALLED=y
-BR2_TOOLCHAIN_EXTERNAL_PATH="/opt/gcc_7040/gcc-linaro-5.3.1-2016.05-x86_64_aarch64-linux-gnu"
+BR2_TOOLCHAIN_EXTERNAL_PATH="/opt/gcc-linaro-7.5.0-2019.12-x86_64_aarch64-linux-gnu"
 BR2_TOOLCHAIN_EXTERNAL_CUSTOM_PREFIX="aarch64-linux-gnu"
 BR2_TOOLCHAIN_EXTERNAL_PREFIX="aarch64-linux-gnu"
 BR2_TOOLCHAIN_EXTERNAL_GLIBC=y
-BR2_TOOLCHAIN_EXTERNAL_GCC_5=y
+BR2_TOOLCHAIN_EXTERNAL_GCC_7=y
+# BR2_TOOLCHAIN_EXTERNAL_GCC_6 is not set
+# BR2_TOOLCHAIN_EXTERNAL_GCC_5 is not set
 # BR2_TOOLCHAIN_EXTERNAL_GCC_4_9 is not set
 # BR2_TOOLCHAIN_EXTERNAL_GCC_4_8 is not set
 # BR2_TOOLCHAIN_EXTERNAL_GCC_4_7 is not set
@@ -121,10 +123,17 @@ BR2_TOOLCHAIN_EXTERNAL_GCC_5=y
 # BR2_TOOLCHAIN_EXTERNAL_GCC_4_5 is not set
 # BR2_TOOLCHAIN_EXTERNAL_GCC_4_4 is not set
 # BR2_TOOLCHAIN_EXTERNAL_GCC_4_3 is not set
+BR2_TOOLCHAIN_EXTERNAL_HEADERS_4_10=y
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_4_9 is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_4_8 is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_4_7 is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_4_6 is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_4_5 is not set
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_4_4 is not set
 # BR2_TOOLCHAIN_EXTERNAL_HEADERS_4_3 is not set
 # BR2_TOOLCHAIN_EXTERNAL_HEADERS_4_2 is not set
 # BR2_TOOLCHAIN_EXTERNAL_HEADERS_4_1 is not set
-BR2_TOOLCHAIN_EXTERNAL_HEADERS_4_0=y
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_4_0 is not set
 # BR2_TOOLCHAIN_EXTERNAL_HEADERS_3_19 is not set
 # BR2_TOOLCHAIN_EXTERNAL_HEADERS_3_18 is not set
 # BR2_TOOLCHAIN_EXTERNAL_HEADERS_3_17 is not set
@@ -157,10 +166,11 @@ BR2_TOOLCHAIN_EXTRA_EXTERNAL_LIBS=""
 BR2_PACKAGE_HOST_GDB=y
 # BR2_PACKAGE_HOST_GDB_TUI is not set
 # BR2_PACKAGE_HOST_GDB_PYTHON is not set
-# BR2_GDB_VERSION_7_8 is not set
-BR2_GDB_VERSION_7_9=y
-# BR2_GDB_VERSION_7_10 is not set
-BR2_GDB_VERSION="7.9.1"
+# BR2_PACKAGE_HOST_GDB_SIM is not set
+# BR2_GDB_VERSION_8_1 is not set
+BR2_GDB_VERSION_8_2=y
+# BR2_GDB_VERSION_8_3 is not set
+BR2_GDB_VERSION="8.2.1"
 BR2_TOOLCHAIN_HAS_NATIVE_RPC=y
 BR2_USE_WCHAR=y
 BR2_ENABLE_LOCALE=y
@@ -198,7 +208,17 @@ BR2_TOOLCHAIN_HEADERS_AT_LEAST_3_17=y
 BR2_TOOLCHAIN_HEADERS_AT_LEAST_3_18=y
 BR2_TOOLCHAIN_HEADERS_AT_LEAST_3_19=y
 BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_0=y
-BR2_TOOLCHAIN_HEADERS_AT_LEAST="4.0"
+BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_1=y
+BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_2=y
+BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_3=y
+BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_4=y
+BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_5=y
+BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_6=y
+BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_7=y
+BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_8=y
+BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_9=y
+BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_10=y
+BR2_TOOLCHAIN_HEADERS_AT_LEAST="4.10"
 BR2_TOOLCHAIN_GCC_AT_LEAST_4_3=y
 BR2_TOOLCHAIN_GCC_AT_LEAST_4_4=y
 BR2_TOOLCHAIN_GCC_AT_LEAST_4_5=y
@@ -207,7 +227,9 @@ BR2_TOOLCHAIN_GCC_AT_LEAST_4_7=y
 BR2_TOOLCHAIN_GCC_AT_LEAST_4_8=y
 BR2_TOOLCHAIN_GCC_AT_LEAST_4_9=y
 BR2_TOOLCHAIN_GCC_AT_LEAST_5=y
-BR2_TOOLCHAIN_GCC_AT_LEAST="5"
+BR2_TOOLCHAIN_GCC_AT_LEAST_6=y
+BR2_TOOLCHAIN_GCC_AT_LEAST_7=y
+BR2_TOOLCHAIN_GCC_AT_LEAST="7"
 
 #
 # System configuration
@@ -324,7 +346,7 @@ BR2_PACKAGE_MPLAYER_ARCH_SUPPORTS=y
 # Compressors and decompressors
 #
 # BR2_PACKAGE_BZIP2 is not set
-# BR2_PACKAGE_GZIP is not set
+BR2_PACKAGE_GZIP=y
 # BR2_PACKAGE_INFOZIP is not set
 # BR2_PACKAGE_LZ4 is not set
 # BR2_PACKAGE_LZIP is not set
@@ -343,6 +365,7 @@ BR2_PACKAGE_MPLAYER_ARCH_SUPPORTS=y
 # BR2_PACKAGE_DSTAT is not set
 # BR2_PACKAGE_DUMA is not set
 # BR2_PACKAGE_FIO is not set
+BR2_PACKAGE_GDB_ARCH_SUPPORTS=y
 BR2_PACKAGE_GDB=y
 # BR2_PACKAGE_GDB_SERVER is not set
 BR2_PACKAGE_GDB_DEBUGGER=y
@@ -417,7 +440,27 @@ BR2_PACKAGE_CMAKE_ARCH_SUPPORTS=y
 # BR2_PACKAGE_CRAMFS is not set
 # BR2_PACKAGE_CURLFTPFS is not set
 # BR2_PACKAGE_DOSFSTOOLS is not set
-# BR2_PACKAGE_E2FSPROGS is not set
+BR2_PACKAGE_E2FSPROGS=y
+BR2_PACKAGE_E2FSPROGS_BADBLOCKS=y
+BR2_PACKAGE_E2FSPROGS_CHATTR=y
+# BR2_PACKAGE_E2FSPROGS_DEBUGFS is not set
+BR2_PACKAGE_E2FSPROGS_DUMPE2FS=y
+BR2_PACKAGE_E2FSPROGS_E2FREEFRAG=y
+BR2_PACKAGE_E2FSPROGS_E2FSCK=y
+# BR2_PACKAGE_E2FSPROGS_E2IMAGE is not set
+BR2_PACKAGE_E2FSPROGS_E2LABEL=y
+BR2_PACKAGE_E2FSPROGS_E2UNDO=y
+# BR2_PACKAGE_E2FSPROGS_E4DEFRAG is not set
+BR2_PACKAGE_E2FSPROGS_FILEFRAG=y
+BR2_PACKAGE_E2FSPROGS_FINDFS=y
+BR2_PACKAGE_E2FSPROGS_FSCK=y
+BR2_PACKAGE_E2FSPROGS_LOGSAVE=y
+BR2_PACKAGE_E2FSPROGS_LSATTR=y
+BR2_PACKAGE_E2FSPROGS_MKE2FS=y
+BR2_PACKAGE_E2FSPROGS_MKLOSTFOUND=y
+# BR2_PACKAGE_E2FSPROGS_RESIZE2FS is not set
+BR2_PACKAGE_E2FSPROGS_TUNE2FS=y
+BR2_PACKAGE_E2FSPROGS_UUIDGEN=y
 # BR2_PACKAGE_E2TOOLS is not set
 # BR2_PACKAGE_ECRYPTFS_UTILS is not set
 # BR2_PACKAGE_EXFAT is not set
@@ -451,9 +494,9 @@ BR2_PACKAGE_MTD_FLASH_UNLOCK=y
 # BR2_PACKAGE_MTD_MKFSUBIFS is not set
 BR2_PACKAGE_MTD_MTD_DEBUG=y
 BR2_PACKAGE_MTD_MTDPART=y
-BR2_PACKAGE_MTD_NANDDUMP=y
-BR2_PACKAGE_MTD_NANDTEST=y
-BR2_PACKAGE_MTD_NANDWRITE=y
+# BR2_PACKAGE_MTD_NANDDUMP is not set
+# BR2_PACKAGE_MTD_NANDTEST is not set
+# BR2_PACKAGE_MTD_NANDWRITE is not set
 # BR2_PACKAGE_MTD_NFTLDUMP is not set
 # BR2_PACKAGE_MTD_NFTL_FORMAT is not set
 # BR2_PACKAGE_MTD_RECV_IMAGE is not set
@@ -462,18 +505,18 @@ BR2_PACKAGE_MTD_NANDWRITE=y
 # BR2_PACKAGE_MTD_SERVE_IMAGE is not set
 # BR2_PACKAGE_MTD_SUMTOOL is not set
 BR2_PACKAGE_MTD_MTDINFO=y
-BR2_PACKAGE_MTD_UBIATTACH=y
-BR2_PACKAGE_MTD_UBICRC32=y
-BR2_PACKAGE_MTD_UBIDETACH=y
-BR2_PACKAGE_MTD_UBIFORMAT=y
-BR2_PACKAGE_MTD_UBIMKVOL=y
-BR2_PACKAGE_MTD_UBINFO=y
-BR2_PACKAGE_MTD_UBINIZE=y
-BR2_PACKAGE_MTD_UBIRENAME=y
-BR2_PACKAGE_MTD_UBIRMVOL=y
-BR2_PACKAGE_MTD_UBIRSVOL=y
-BR2_PACKAGE_MTD_UBIUPDATEVOL=y
-BR2_PACKAGE_MTD_UBIBLOCK=y
+# BR2_PACKAGE_MTD_UBIATTACH is not set
+# BR2_PACKAGE_MTD_UBICRC32 is not set
+# BR2_PACKAGE_MTD_UBIDETACH is not set
+# BR2_PACKAGE_MTD_UBIFORMAT is not set
+# BR2_PACKAGE_MTD_UBIMKVOL is not set
+# BR2_PACKAGE_MTD_UBINFO is not set
+# BR2_PACKAGE_MTD_UBINIZE is not set
+# BR2_PACKAGE_MTD_UBIRENAME is not set
+# BR2_PACKAGE_MTD_UBIRMVOL is not set
+# BR2_PACKAGE_MTD_UBIRSVOL is not set
+# BR2_PACKAGE_MTD_UBIUPDATEVOL is not set
+# BR2_PACKAGE_MTD_UBIBLOCK is not set
 # BR2_PACKAGE_MTOOLS is not set
 # BR2_PACKAGE_NFS_UTILS is not set
 # BR2_PACKAGE_NTFS_3G is not set
@@ -1316,7 +1359,7 @@ BR2_PACKAGE_QEMU_ARCH_SUPPORTS_TARGET=y
 #
 # ejabberd needs erlang
 #
-# BR2_PACKAGE_ETHTOOL is not set
+BR2_PACKAGE_ETHTOOL=y
 # BR2_PACKAGE_FAIFA is not set
 # BR2_PACKAGE_FASTD is not set
 # BR2_PACKAGE_FCGIWRAP is not set
@@ -1352,22 +1395,7 @@ BR2_PACKAGE_IPTABLES=y
 # BR2_PACKAGE_KISMET is not set
 # BR2_PACKAGE_KNOCK is not set
 # BR2_PACKAGE_LEAFNODE2 is not set
-BR2_PACKAGE_LFTP=y
-
-#
-# Commands
-#
-BR2_PACKAGE_LFTP_CMD_MIRROR=y
-BR2_PACKAGE_LFTP_CMD_SLEEP=y
-# BR2_PACKAGE_LFTP_CMD_TORRENT is not set
-
-#
-# Protocols
-#
-# BR2_PACKAGE_LFTP_PROTO_FISH is not set
-BR2_PACKAGE_LFTP_PROTO_FTP=y
-# BR2_PACKAGE_LFTP_PROTO_HTTP is not set
-BR2_PACKAGE_LFTP_PROTO_SFTP=y
+# BR2_PACKAGE_LFTP is not set
 # BR2_PACKAGE_LIBRESWAN is not set
 # BR2_PACKAGE_LIGHTTPD is not set
 # BR2_PACKAGE_LINKNX is not set
@@ -1377,7 +1405,7 @@ BR2_PACKAGE_LFTP_PROTO_SFTP=y
 # BR2_PACKAGE_LRZSZ is not set
 # BR2_PACKAGE_MACCHANGER is not set
 # BR2_PACKAGE_MEMCACHED is not set
-# BR2_PACKAGE_MII_DIAG is not set
+BR2_PACKAGE_MII_DIAG=y
 # BR2_PACKAGE_MINIDLNA is not set
 # BR2_PACKAGE_MJPG_STREAMER is not set
 
@@ -1609,7 +1637,7 @@ BR2_PACKAGE_INITSCRIPTS=y
 # BR2_PACKAGE_KMOD is not set
 # BR2_PACKAGE_KVMTOOL is not set
 # BR2_PACKAGE_LXC is not set
-# BR2_PACKAGE_MONIT is not set
+BR2_PACKAGE_MONIT=y
 # BR2_PACKAGE_NCDU is not set
 # BR2_PACKAGE_NUT is not set
 # BR2_PACKAGE_POLKIT is not set
@@ -1630,7 +1658,12 @@ BR2_PACKAGE_PROCPS_NG=y
 # BR2_PACKAGE_SYSLOG_NG is not set
 BR2_PACKAGE_SYSTEMD_ARCH_SUPPORTS=y
 # BR2_PACKAGE_TAR is not set
-# BR2_PACKAGE_UTIL_LINUX is not set
+BR2_PACKAGE_UTIL_LINUX=y
+BR2_PACKAGE_UTIL_LINUX_LIBBLKID=y
+# BR2_PACKAGE_UTIL_LINUX_LIBMOUNT is not set
+# BR2_PACKAGE_UTIL_LINUX_LIBSMARTCOLS is not set
+BR2_PACKAGE_UTIL_LINUX_LIBUUID=y
+# BR2_PACKAGE_UTIL_LINUX_BINARIES is not set
 
 #
 # Text editors and viewers
